<resources>
    <string name="app_name">OwnStore</string>
    <string name="action_settings">Settings</string>
    <string name="edit_pet_breed">Breed</string>
    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="category_gender">Gender</string>
    <string name="category_overview">Category</string>
    <string name="hint_pet_weight">Weight</string>
    <string name="hint_pet_breed">Breed</string>
    <string name="hint_pet_name">Name</string>
    <string name="category_measurement">Pet Weight</string>
    <string name="unit_pet_weight">Kgs</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Pets</string>
    <string name="editor_pet_success">Pet saved</string>
    <string name="editor_pet_failed">Failed to save pet</string>
    <string name="empty_title">Its a bit lonely here...</string>
    <string name="empty_content">Add some pets</string>
</resources>
